# mea-pet-public

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  MeaPet.spec  README.md  chat.py  chat_input.py  config.example.json  config_settings.json  gsv_infer.py  hook-live2d.py  linux_requirements.txt  live2d_widget.py  mea_memory.db  memory.py  pet.py  pet_live2d.py  pre_render_voices.py  precache_interactions.py  pyproject.toml  renderer.py  setup_wizard.py  status_panel.py  tts.py  utils.py  vits_infer.py  watcher.py  启动桌宠.bat  启动桌宠.sh
.github/workflows/: python-app.yml
GPT-Sovits/clam/: jp_clam.txt  zh_clam.txt
GPT-Sovits/normal/: jp_normal.txt  zh_normal.txt
GPT-Sovits/soft/: jp_soft.txt  zh_soft.txt
design-system/: MASTER.md
design-system/pages/: desktop.md  wizard.md
docs/: backend-and-control.md
live2d/: index.html
meapet/: log.py  paths.py  ui_controls.py  ui_theme.py  utils.py
meapet/agent/: __init__.py  base.py  factory.py  hermes.py  openai_adapter.py  openclaw.py  openclaw_identity.py  prompts.py
meapet/chat/: engine.py
meapet/config/: normalizers.py  store.py
meapet/control/: __init__.py  broker.py  mcp_server.py  transport.py
meapet/conversation/: __init__.py  capabilities.py  output_protocol.py  timeline.py  types.py
meapet/desktop/: app.py  chat_flow.py  chat_input.py  config_bridge.py  control_bridge.py  dialogs.py  icons.py  interaction.py  live2d_widget.py  render_host.py  renderer.py  status_language.py  status_panel.py  theme.py  timeline_viewer.py  watch_ctrl.py  widgets.py  window_chrome.py  workers.py
meapet/direct/: client.py  conversation.py  types.py
meapet/memory/: __init__.py  db.py
meapet/tools/: vits_infer.py
meapet/tts/: __init__.py  common.py  language_policy.py  service.py  translation.py
meapet/watcher/: capture.py  screen.py
models/GPT_weights/: mea_pro-e50.ckpt
scripts/: build_windows.ps1
tests/: test_agent_chat_flow.py  test_agent_presentation.py  test_companion_control.py  test_companion_desktop_bridge.py  test_companion_mcp_security.py  test_conversation_contracts.py  test_conversation_timeline.py  test_core_fixes.py  test_coverage_boost.py  test_direct_chat_flow.py  test_direct_protocols.py  test_frozen_paths.py  test_hermes_adapter.py  test_live2d_startup.py  test_memory_advanced.py  test_mixin_contracts.py  test_module_split.py  test_openai_adapter.py  test_openclaw_adapter.py  test_release_packaging.py  test_review_regressions.py  test_screen_capture.py  test_tts_language_routing.py  test_tts_translation_service.py  test_ui_refactor.py  test_vision_modes.py  test_wizard_agent_config.py  test_wizard_configuration_experience.py
wizard/: app.py  connection_test.py  env_utils.py  page_backend.py  page_env.py  page_llm.py  page_tts.py  page_tts_gsv.py  page_tts_vits.py  page_vision.py  pages.py  platform_info.py  styles.py  widgets.py
(+14 files in other folders)
